<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="no_internet_button_text">okay</string>
	<string name="no_internet_text">Sie sind leider nicht online. Bitte überprüfen Sie ihre Verbindung.</string>
	<string name="no_internet_title">Keine Verbindung.</string>
	<string name="connection_error_when_calling">Bitte überprüfen Sie Ihre Verbindung, damit der identify-Agent Sie erreichen kann.</string>
	<string name="are_you_sure">Möchten Sie wirklich abbrechen?</string>
	<string name="yes">Ja</string>
	<string name="no">Nein</string>
	<string name="reason_network">Verbindungsfehler</string>
	<string name="reason_empty_body">Leider ist die Antwort leer.</string>
	<string name="reason_authentication_error">Authentifizierungsfehler</string>
	<string name="reason_success_socket_data_send">Daten erfolgreich übermittelt</string>
	<string name="reason_generic">Etwas ist schief gelaufen</string>
	<string name="reason_response">Ooops, anscheinend haben wir einen Serverfehler</string>
	<string name="reason_timeout">Zeitüberschreitung</string>
	<string name="reason_socket_connection">Ihre Internetverbindung ist schlecht. Bitte versuchen Sie es erneut.</string>
	<string name="reason_persistance_empty">Leider sind keine Angaben vorhanden.</string>
	<string name="reason_no_network_persistance_empty">Es scheint es liegen keine Daten oder kein Netzwerk vor</string>
	<string name="nfc_toast_message">Bitte lesen Sie die NFC-Karte erneut</string>
	<string name="button_allow">Erlauben</string>
	<string name="button_deny">Verweigern</string>
	<string name="permission_camera_rationale">Um einen Videoanruf mit dem identify-Agent zu führen, müssen Sie bitte den Zugriff auf die Kamera und das Mikrofon erlauben.</string>
	<string name="nfc_description">Bitte halten Sie ihr Telefon auf Ihren Personalausweis, um die NFC lesen zu können.</string>
	<string name="nfc_ready">Bereit zum Scannen</string>
	<string name="nfc_reading">NFC-Karte wird gelesen. Bitte bewegen Sie die Karte nicht.</string>
	<string name="nfc_try_again">NFC-Daten konnten nicht gelesen werden. Bitte versuchen Sie es erneut mit der NFC-Karte.</string>
	<string name="nfc_success">NFC-Daten erfolgreich gelesen. Sie werden zum identify-Agent weitergeleitet.</string>
	<string name="app_name">Kimlik Basit</string>
	<string name="pls_wait_for_calling">Bitte warten Sie auf diesem Bildschirm, bis unser Kundenvertreter Sie anruft.</string>
	<string name="wait_with_id">Stellen Sie sicher, dass Sie Ihren Ausweis bei sich haben und bereit sind.</string>
	<string name="receiving_a_call">Unser Kundenvertreter ruft an...</string>
	<string name="calling_description">Bitte antworten Sie, um den Videoanruf zu starten.</string>
	<string name="customer_service_online">Kundenservice online</string>
	<string name="customer_service_offline">Kundenservice offline</string>
	<string name="desc_toggle_microphone">Mic An-Aus</string>
	<string name="desc_hangup">Auflegen</string>
	<string name="desc_toggle_camera">Kamera An-Aus</string>
	<string name="connecting_stream">Verbinden...</string>
	<string name="identify_is_in_progress">identifizieren ist in Bearbeitung</string>
	<string name="wait_call_title">Warten auf Anruf</string>
	<string name="success_connection">Unser identify-Agent ist gleich für Sie da</string>
	<string name="connection_try_again">Erneut verbinden</string>
	<string name="connection_error_title">Überprüfen Sie Ihre Internetverbindung und klicken Sie auf die Schaltfläche, um eine Verbindung zu unserem Identify-Agent herzustellen</string>
	<string name="enter_pin">SMS-Code fehlt. Überprüfen Sie bitte das</string>
	<string name="enter_pin_description">Bitte geben Sie die TAN ein</string>
	<string name="confirm">Bestätigen</string>
	<string name="support_error">Unterstützender Support-Fehler</string>
	<string name="support_error_desc">Leider unterstützt Ihr Gerät NFC nicht. Klicken Sie bitte also auf die Schaltfläche, um das Formular auszufüllen. </string>
	<string name="nfc_off">NFC aus</string>
	<string name="nfc_off_desc">Aktivieren Sie die NFC-Einstellung und versuchen Sie es bitte erneut.</string>
	<string name="go_to_setting">gehe zu Einstellungen</string>
	<string name="are_you_sure_title">Möchten Sie wirklich abbrechen?</string>
	<string name="nfc_error_count_title">Nfc Data Read Counter Error</string>
	<string name="nfc_error_count_desc">Sie haben die maximale Anzahl von NFC-Lesefehlern erreicht. Fahren Sie mit dem Kundenvertreter fort.</string>
	<string name="go_on">Fortsetzen</string>
	<string name="vitality_title">Vitalitätskontrolle</string>
	<string name="smiling_text">Sie können mit einem kraftvollen Lächeln weitermachen.</string>
	<string name="blink_text">Sie müssen blinken, um Vitalität zu erkennen..</string>
	<string name="turn_your_head_right_text">Drehen Sie Ihren Kopf um 45 Grad nach rechts, um die Vitalität zu erkennen.</string>
	<string name="redirect_to_customer_services">Sie werden zu den Kundendiensten weitergeleitet</string>
	<string name="turn_your_head_left_text">Zum Schluss drehen Sie Ihren Kopf um 45 Grad nach links, um die Vitalität zu erkennen.</string>
	<string name="finish_process">Sie haben die Authentifizierung abgeschlossen, danke...</string>
	<string name="intro_welcome">Herzlich willkommen</string>
	<string name="intro_welcome_desc">Die Schritte, die wir im Identifizierungsprozess unternehmen werden, sind jeweils</string>
	<string name="intro_ocr_desc">Scannen Sie die Rückseite Ihrer ID.</string>
	<string name="start">Start</string>
	<string name="intro_nfc_desc">Bringen Sie Ihren Ausweis mit und lassen Sie einen NFC-Scan durchführen</string>
	<string name="intro_vitality_desc">Vitalitätskontrolle (Bitte lächeln 😊)</string>
	<string name="intro_call_desc">Stellen Sie eine Verbindung zum Kundenvertreter her</string>
	<string name="intro_tan_desc">SMS-Überprüfungsprozess</string>
	<string name="permission_title">Anwendungsberechtigungen</string>
	<string name="permission_desc">Bitte bestätigen Sie die Kamera- und Mikrofonberechtigungen, um fortzufahren.</string>
	<string name="permission_btn">ermöglichen</string>
	<string name="next">Nächster</string>
	<string name="back">Zurück</string>
	<string name="skip">überspringen</string>
</resources>
