<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_code_verification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_pin_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorTextGrey" />

        <EditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/all_black_border_white_bg"
            android:hint="@string/enter_pin"
            android:inputType="number"
            android:paddingStart="16dp"
            android:maxLength="6"
            android:paddingEnd="18dp"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="12sp" />


        <RelativeLayout
            android:id="@+id/relLaySendSmsCode"
            android:layout_width="134dp"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/main_button_bg"
            android:elevation="2dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AppTheme.TextViewStyle.Description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/confirm" />

        </RelativeLayout>

    </LinearLayout>
        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/progressCircular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>