<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bgLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surfaceViewRendererLocal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surfaceViewRendererRemote"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:id="@+id/relLayCallWaiting"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:background="@color/primaryColor"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/callWaitingTxt"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_bold"
            android:textSize="24sp"
            android:text="@string/connecting_stream"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:layout_below="@+id/callWaitingTxt"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ToggleButton
            android:id="@+id/microphoneEnabledToggle"
            style="@style/ToggleButtonBorderlessTextless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@drawable/ic_microphone_toggle"
            android:contentDescription="@string/desc_toggle_microphone"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <ImageButton
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_hangup"
            android:src="@drawable/call_end_button" />

        <ToggleButton
            android:id="@+id/cameraEnabledToggle"
            style="@style/ToggleButtonBorderlessTextless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@drawable/ic_videocam_on_off_toggle"
            android:contentDescription="@string/desc_toggle_camera"
            android:minWidth="0dp"
            android:minHeight="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
        <!--bottom sheet container-->
        <FrameLayout
            android:id="@+id/bottomSheetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/bottom_sheet_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>