<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/new_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/relLayWelcome"
        android:layout_width="0dp"
        android:layout_height="0dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/imgBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_kimlik_basit_icon"/>
        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="-200dp"
            android:layout_below="@id/imgBackground"
            android:src="@drawable/ic_kb_logo"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_slab_bold"
            android:id="@+id/tvWelcome"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:layout_centerHorizontal="true"
            android:text="@string/intro_welcome"
            android:layout_below="@+id/imgBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/tvDesc"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/intro_welcome_desc"
            android:layout_below="@+id/tvWelcome"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/cardStart"
            app:cardBackgroundColor="@android:color/white"
            android:layout_below="@+id/tvDesc"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_slab_bold"
                android:layout_gravity="center"
                android:textColor="@color/colorDarkBlue"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/start"
                android:layout_below="@+id/imgBackground"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relLaySlider"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
    <androidx.viewpager2.widget.ViewPager2
        android:clipToPadding="false"
        android:clipChildren="false"
        android:id="@+id/viewpager"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/indicator_rectangle"
        android:alpha="0.6"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorHeight="0dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/relLayBack"
                android:layout_alignParentStart="true"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_slab_bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:id="@+id/tvSkipBack"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/imgLeftArrow"
                    android:text="@string/skip" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgLeftArrow"
                    android:layout_marginStart="15dp"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/relLayNext"
                android:layout_alignParentEnd="true"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_slab_bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:id="@+id/tvNext"
                    android:text="@string/next" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/tvNext"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/imgRightArrow"
                    android:src="@drawable/ic_arrow"/>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relLayPermission"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgIllustration"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_permission_illustration"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_slab_bold"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:id="@+id/tvPermissionTitle"
            android:layout_below="@+id/imgIllustration"
            android:layout_marginTop="-120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/permission_title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/tvPermissionDesc"
            android:layout_below="@+id/tvPermissionTitle"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/permission_desc"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/cardPermission"
            app:cardBackgroundColor="@android:color/white"
            android:layout_below="@+id/tvPermissionDesc"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="32dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_slab_bold"
                android:layout_gravity="center"
                android:textColor="@color/colorDarkBlue"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/permission_btn"
                android:layout_below="@+id/imgBackground"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>