<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootRelLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

             <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/areyousure" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/no_internet_text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/yesBtn"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/successGreen"
                        app:cardCornerRadius="28dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/yes"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/noBtn"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/red"
                        app:cardCornerRadius="28dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/no"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />


                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>