<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/viewTitle"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linLayConnectionSuccess"
            android:layout_centerVertical="true"
            android:visibility="visible"
            android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/callLoadingAnimation"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/pls_wait_animation" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleBoldTxt"
                style="@style/AppTheme.TextViewStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:textSize="16sp"
                android:text="@string/pls_wait_for_calling"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animConnectionSuccess"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/connection_success" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tvConnectionSuccess"
                    android:text="@string/success_connection"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/successGreen"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linLayConnectionLost"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:orientation="vertical">
           <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animConnectionLost"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/no_connection" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvConnectionErrorTitle"
                style="@style/AppTheme.TextViewStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:padding="20dp"
                android:text="@string/connection_error_title" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
               <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animConnectionError"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/connection_error" />
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:id="@+id/btnReConnect"
                    app:cardElevation="4dp"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="@android:color/white">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/tvConnectionError"
                        android:text="@string/connection_try_again"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/successGreen"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>